Added covers to mangas list

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('css/offcanvas.css') }}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
     </head>
     <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
@@ -46,7 +46,7 @@
         {% block body %}{% endblock %}
     </div>
     <footer>
-        <p>© Jan Olszański 2017</p>
+        <p>© Jan Olszański <a href="mailto:jolszanski997@gmail.com">jolszanski997@gmail.com</a> 2017</p>
     </footer>
         {% block javascripts %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
