--- a/app/Resources/views/manga/show.html.twig
+++ b/app/Resources/views/manga/show.html.twig
@@ -22,6 +22,10 @@
                 <td>{{ manga.jpTitle }}</td>
             </tr>
             <tr>
+                <th>Owner</th>
+                <td>{{ manga.user.nickname}}</td>
+            </tr>
+            <tr>
                 <th>Publisher</th>
                 <td>{{ manga.publisher }}</td>
             </tr>
@@ -32,10 +36,6 @@
             <tr>
                 <th>Author</th>
                 <td>{{ manga.author }}</td>
-            </tr>
-            <tr>
-                <th>Cover</th>
-                <td></td>
             </tr>
             <tr>
                 <th>Volumes</th>
