--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,15 +18,24 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('manga_index') }}">Manga Collection <span class="sr-only">(current)</span></a>
-                </li>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <li class="nav-item dropdown" >
+                        <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manga list</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown02">
+                            <a class="dropdown-item" href="{{ path('manga_all_index') }}">All user list</a>
+                            <a class="dropdown-item" href="{{ path('manga_index') }}">Yours list</a>
+                        </div>
+                    </li>
+
+                {% endif %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Actions</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                             {% if is_granted('ROLE_ADMIN') %}
                                 <a class="dropdown-item" href="{{ path('genre_index') }}">Genre</a>
+                                <a class="dropdown-item" href="{{ path('status_index') }}">Status</a>
+                                <a class="dropdown-item" href="{{ path('publisher_index') }}">Publisher</a>
                             {% endif %}
                             <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">Log out</a>
                         {% else %}
