--- a/app/Resources/views/manga/_volume_card.html.twig
+++ b/app/Resources/views/manga/_volume_card.html.twig
@@ -2,8 +2,7 @@
 
     <div class="card-body">
         <h4 class="card-title">{{ manga.title }} {{ volume.volumeNumber }}</h4>
-        <p class="card-text">Release date: {{ volume.releaseDate|date("m/d/Y") }}</p>
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        {% if is_granted('edit',manga) %}
             {{ form_start(volume_delete_form) }}
                 <input type="submit" value="Delete">
             {{ form_end(volume_delete_form) }}
