Ver 2.0 bit different

--- a/app/Resources/views/genre/index.html.twig
+++ b/app/Resources/views/genre/index.html.twig
@@ -7,7 +7,7 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Genre</th>
+                <th>Name</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -15,7 +15,7 @@
         {% for genre in genres %}
             <tr>
                 <td><a href="{{ path('genre_show', { 'id': genre.id }) }}">{{ genre.id }}</a></td>
-                <td>{{ genre.genre }}</td>
+                <td>{{ genre.name }}</td>
                 <td>
                     <ul>
                         <li>
