--- a/app/Resources/views/genre/show.html.twig
+++ b/app/Resources/views/genre/show.html.twig
@@ -10,8 +10,8 @@
                 <td>{{ genre.id }}</td>
             </tr>
             <tr>
-                <th>Genre</th>
-                <td>{{ genre.genre }}</td>
+                <th>Name</th>
+                <td>{{ genre.name }}</td>
             </tr>
         </tbody>
     </table>
