--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,4 +1,14 @@
-.cover{
-    height: 100px;
-    width: 50px;
+.volumes-cards{
+    width: 20%;
+    box-sizing: border-box;
+    flex-grow: 1;
+
+}
+.volume-container{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-grow: 1;
 }
