--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,62 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}{% endblock %}</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>{% block title %}MangaCollection{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="{{ asset('css/carousel.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/helpers.css') }}" />
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" href="{{ asset('css/offcanvas.css') }}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
     </head>
     <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{ path('home') }}">MangaCollection</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    <li class="nav-item dropdown" >
-                        <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manga list</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown02">
-                            <a class="dropdown-item" href="{{ path('manga_all_index') }}">All user list</a>
-                            <a class="dropdown-item" href="{{ path('manga_index') }}">Yours list</a>
-                        </div>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="{{ path("homepage") }}">MangaCollection</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("homepage") }}">{{ "home.startingpage"|trans({}, 'home') }} <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("manga_index") }}">Manga</a>
+                    </li>
+                </ul>
 
-                {% endif %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Actions</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                            {% if is_granted('ROLE_ADMIN') %}
-                                <a class="dropdown-item" href="{{ path('genre_index') }}">Genre</a>
-                                <a class="dropdown-item" href="{{ path('status_index') }}">Status</a>
-                                <a class="dropdown-item" href="{{ path('publisher_index') }}">Publisher</a>
-                            {% endif %}
-                            <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">Log out</a>
-                        {% else %}
-                            <a class="dropdown-item" href="{{ path('fos_user_security_login') }}">Log in</a>
-                        {% endif %}
-                    </div>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
-    <div class="container">
+                <ul class="navbar-nav ustify-content-end">
+                    {% if is_granted('IS_AUTHENTICATED_FULLY')%}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("fos_user_security_logout") }}">{{ "user.logout"|trans({}, 'user') }}</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("fos_user_registration_register") }}">{{ "user.singup"|trans({},'user') }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("fos_user_security_login") }}">{{ "user.login"|trans({},'user') }}</a>
+                        </li>
+                    {% endif %}
+                </ul>
 
+            </div>
+        </nav>
         {% block body %}{% endblock %}
-    </div>
-    <footer>
-        <p>© Jan Olszański <a href="mailto:jolszanski997@gmail.com">jolszanski997@gmail.com</a> 2017</p>
-    </footer>
         {% block javascripts %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
